cloud-infra-macros/tests/fails/delay_seconds_too_high.rs
use cloud_infra_macros::delay_seconds;

fn example() {
    let delay = delay_seconds!(1000);
}

fn main() {}